# python-server-side-apps-template

./: README.md  copier.yml  pyproject.toml
template/: .editorconfig  .flake8  .gitignore  README.md.j2  manage.py  {%if use_poetry%}pyproject.toml{%endif%}.j2
template/db-migrations/: README.md
template/mates/: README.md
template/scripts/: README.md
template/testdata/: README.md  __init__.py
template/tools/: README.md
template/{{core_pkg_name}}/: db.py
template/{{core_pkg_name}}/actions/: README.md
template/{{core_pkg_name}}/commands/: README.md
template/{{core_pkg_name}}/config/: README.md
template/{{core_pkg_name}}/interceptors/: README.md
template/{{core_pkg_name}}/models/: README.md
template/{{core_pkg_name}}/proto/: README.md
template/{{core_pkg_name}}/services/: README.md
template/{{core_pkg_name}}/utils/: README.md  datetime.py  dict.py  mod.py  rand.py  seq.py  string.py
