[tool.poetry]
name = "pssat"
version = "0.1.0"
description = "Python server-side app template"
authors = ["wonderbeyond <wonderbeyond@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
